--- a/pom.xml
+++ b/pom.xml
@@ -12,29 +12,29 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.realese>11</maven.compiler.realese>
+        <maven.compiler.realese>17</maven.compiler.realese>
         <junit.version>5.9.2</junit.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>jakarta.enterprise</groupId>
             <artifactId>jakarta.enterprise.cdi-api</artifactId>
-            <version>3.0.0</version>
+            <version>4.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>3.0.0</version>
+            <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <version>5.0.0</version>
+            <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -62,14 +62,15 @@
             <plugin>
                 <groupId>io.openliberty.tools</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
-                <version>3.10</version>
+                <version>3.10.2</version>
                 <executions>
                     <execution>
                         <id>create-server</id>
                         <phase>pre-integration-test</phase>
                         <goals>
                             <goal>create</goal>
-                            <goal>package</goal>
+                            <goal>install-feature</goal>
+                            <goal>deploy</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -77,8 +78,8 @@
                     <serverName>defaultServer</serverName>
                     <runtimeArtifact>
                         <groupId>io.openliberty</groupId>
-                        <artifactId>openliberty-microProfile6</artifactId>
-                        <version>24.0.0.2</version>
+                        <artifactId>openliberty-webProfile10</artifactId>
+                        <version>24.0.0.3</version>
                         <type>zip</type>
                     </runtimeArtifact>
                 </configuration>
